<resources>
    <string name="app_name">FoodPlannerApp</string>
    <string name="guest">guest</string>
    <string name="login">Login</string>
    <string name="signUpWithMail">sing up</string>
    <string name="create_account">create Account</string>
    <string name="login_account">Login and enjoy with us!</string>
    <string name="Optimize_meals">Optimize your meals</string>
    <string name="Optimize_meals_login">Enjoy your daily meals</string>
    <string name="enterYourMail">Please Enter Your Email</string>
    <string name="enterPassword">Please Enter Your Password</string>
    <string name="signUp">SignUp</string>
    <string name="createNewAccount">" Create account "</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!-- Fragment Title-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_search">Search</string>
    <string name="title_details">Details</string>
    <string name="title_category">Category</string>
    <string name="title_plane">Plan</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_home">Home</string>

    <!-- Menu-->
    <string name="signout_option">Signout</string>

    <!--item_list-->
    <string name="search_title">Search</string>
    <string name="forgotpass">We just need your registered Email address to send you password reset instructions.</string>
    <string name="emptycart"><b>Your Cart is empty.</b>\n Your Cart lives to serve. Give it purpose fill it with Food. \n\n Continue Ordering or visit your Favourite Section.</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="emptyfav">What\'s my favourite food? Once you order out..\n -ABIGAIL BRESLIN. </string>
    <string name="autocomplete_result_show">Data result</string>
    <string name="settings_option">Settings</string>
    <string name="search_by_ingredient">Search By Ingredient</string>
    <string name="search_by_country">Search By Country</string>
    <string name="search_by_category">Search By Category</string>
    <string name="see_more"><u>Show All</u></string>
    <string name="search_about_meal">Search About Your meal </string>
    <string name="dialy_inspire_title">Random Inspiration</string>
    <string name="addToPlan">Add to plan</string>
    <string name="add">Add</string>
    <string name="add_to_plan">Add To Plan</string>
    <string name="loading">Loading..</string>
    <string name="logout_title">Logout</string>
    <string name="logout_message_dialog">Do you want to leave app?</string>
    <string name="nothingToShow">You Dont have any meals plan</string>
    <string name="dialog_positive_button">Yes</string>
    <string name="dialog_negative_button">No</string>
    <string name="delete_favorite">Are you sure you want to remove this item?</string>
    <string name="delete_title">Delete</string>
    <string name="ingredient_image">ing_img</string>


    <!--    <string name="default_web_client_id">3933849686-i5ao9eb0rsuh52a3lqqnsa016eb6o9in.apps.googleusercontent.com</string>-->



</resources>