<?xml version="1.0" encoding="utf-8"?>
<!--TODO Moamen [UI]: Adjust Navigation of all Project-->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.foodplannerapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_details"
            app:destination="@id/navigation_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/navigation_search"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.foodplannerapp.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.example.foodplannerapp.ui.plan.PlanFragment"
        android:label="@string/title_plane"
        tools:layout="@layout/fragment_plan" />
    <fragment
        android:id="@+id/navigation_category"
        android:name="com.example.foodplannerapp.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_navigation_category_to_navigation_details"
            app:destination="@id/navigation_details"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_navigation_category_to_searchFragment"
            app:destination="@id/navigation_search"
            app:enterAnim="@anim/nav_default_pop_enter_anim"
            app:exitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_navigation_category_to_navigation_search"
            app:destination="@id/navigation_search" />
    </fragment>
    <activity
        android:id="@+id/splashActivity"
        android:name="com.example.foodplannerapp.ui.splash.SplashActivity"
        android:label="SplashActivity" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.foodplannerapp.ui.login.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <activity
        android:id="@+id/registerActivity"
        android:name="com.example.foodplannerapp.ui.register.RegisterActivity"
        android:label="activity_sign_up"
        tools:layout="@layout/activity_register" />
    <activity
        android:id="@+id/signUpOrLoginActivity"
        android:name="com.example.foodplannerapp.ui.signup_or_login.SignUpOrLoginActivity"
        android:label="activity_sign_up_or_login"
        tools:layout="@layout/activity_signup_or_login" />
<!--    <dialog-->
<!--        android:id="@+id/addToPlaneDialog"-->
<!--        android:name="iti.android.foodplanner.ui.features.details.AddToPlaneDialog"-->
<!--        android:label="fragment_add_to_plane_dialog"-->
<!--        tools:layout="@layout/fragment_add_to_plane_dialog" />-->
    <fragment
        android:id="@+id/navigation_details"
        android:name="com.example.foodplannerapp.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="mealId"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.foodplannerapp.ui.search.SearchFragment"
        android:label="@string/title_search" >
        <argument
            android:name="search"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="Nothing" />
        <argument
            android:name="type"
            app:argType="integer" />
        <action
            android:id="@+id/action_navigation_search_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>
</navigation>