<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/create_an_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="184dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:text="@string/login_account"
        android:textAppearance="@style/hi_welcome_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:id="@+id/connect_wit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/Optimize_meals_login"
        android:textAppearance="@style/hello_again"
        app:layout_constraintStart_toStartOf="@+id/create_an_a"
        app:layout_constraintTop_toBottomOf="@+id/create_an_a" />

    <EditText
        android:textSize="14sp"
        android:id="@+id/emailTxtView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="316dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/enterYourMail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#999EA1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:textSize="14sp"
        android:id="@+id/passwordTxtView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#999EA1"
        app:layout_constraintEnd_toEndOf="@+id/emailTxtView"
        app:layout_constraintTop_toBottomOf="@+id/emailTxtView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Password"
        android:textColor="@color/teal_color_dark"
        app:layout_constraintBottom_toTopOf="@+id/passwordTxtView"
        app:layout_constraintStart_toStartOf="@+id/passwordTxtView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Email"
        android:textColor="@color/teal_color_dark"
        app:layout_constraintBottom_toTopOf="@+id/emailTxtView"
        app:layout_constraintStart_toStartOf="@+id/emailTxtView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:backgroundTint="@drawable/button_state_color"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="@+id/passwordTxtView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordTxtView"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxtView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="You don't have an account ?"
        android:textColor="#999EA1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/createNewAccountTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createNewAccount"
        android:textColor="@color/teal_color_dark"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/loginscreen" />
</androidx.constraintlayout.widget.ConstraintLayout>