<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_color"
    tools:context=".ui.signup_or_login.SignUpOrLoginActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="84dp"
        android:padding="8dp"
        android:src="@drawable/meallogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:elevation="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:id="@+id/signUpWithMailBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:background="@drawable/rounded_whilte_button"
        android:text="@string/signUpWithMail"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.google.android.gms.common.SignInButton
        android:background="@drawable/rounded_whilte_button"
        android:outlineAmbientShadowColor="@color/white"
        android:elevation="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:id="@+id/signInWithGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="@+id/signUpWithMailBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signUpWithMailBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpWithMailBtn" ></com.google.android.gms.common.SignInButton>

    <TextView
        android:padding="1dp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or sign in with google"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/signInWithGoogle"
        app:layout_constraintEnd_toEndOf="@+id/signUpWithMailBtn"
        app:layout_constraintStart_toStartOf="@+id/signUpWithMailBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpWithMailBtn" />

    <View
        android:backgroundTint="@color/white"
        android:id="@+id/divider3"
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <View
        android:backgroundTint="@color/white"
        android:id="@+id/divider4"
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="Already have an account? "
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guestButton"
        app:layout_constraintVertical_bias="0.316" />

    <TextView
        android:id="@+id/loginTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/signInWithGoogle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:elevation="10dp"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:id="@+id/guestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_whilte_button"
        android:text="@string/guest"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/signInWithGoogle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signInWithGoogle"
        app:layout_constraintTop_toBottomOf="@+id/signInWithGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>