<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_color"
    tools:context=".ui.sign_in_with_google.SignUpOrLoginActivity">



    <ImageView
        android:src="@drawable/sorlhome"
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

<!--    <View-->
<!--        android:id="@+id/view"-->
<!--        android:layout_width="413dp"-->
<!--        android:layout_height="379dp"-->
<!--        android:background="#008080"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <View-->
<!--        android:id="@+id/gradient"-->
<!--        android:layout_width="426dp"-->
<!--        android:layout_height="361dp"-->
<!--        android:layout_alignParentLeft="true"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:background="@drawable/gradient"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/view"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/imageView"-->
<!--        app:layout_constraintVertical_bias="1.0" />-->

    <Button
        android:background="@drawable/rounded_whilte_button"
        android:id="@+id/signUpWithMailBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="376dp"
        android:text="@string/signUpWithMail"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInWithGoogle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/signUpWithMailBtn"
        app:layout_constraintStart_toStartOf="@+id/signUpWithMailBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpWithMailBtn" />

    <TextView
        android:padding="1dp"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or sign in with google"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/signInWithGoogle"
        app:layout_constraintEnd_toEndOf="@+id/signUpWithMailBtn"
        app:layout_constraintStart_toStartOf="@+id/signUpWithMailBtn"
        app:layout_constraintTop_toBottomOf="@+id/signUpWithMailBtn" />

    <View
        android:backgroundTint="@color/white"
        android:id="@+id/divider3"
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <View
        android:backgroundTint="@color/white"
        android:id="@+id/divider4"
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="Already have an account?"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="@+id/signInWithGoogle"
        app:layout_constraintTop_toBottomOf="@+id/signInWithGoogle" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/loginTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/signInWithGoogle"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:background="@drawable/rounded_whilte_button"
        android:id="@+id/guestButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/guest"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/signInWithGoogle"
        app:layout_constraintStart_toStartOf="@+id/signInWithGoogle"
        app:layout_constraintTop_toBottomOf="@+id/signInWithGoogle" />

</androidx.constraintlayout.widget.ConstraintLayout>